ui fixes for login screen on mobile

--- a/frontend-src/src/App.scss
+++ b/frontend-src/src/App.scss
@@ -18,9 +18,9 @@
   height:auto;
 }
 .SpotifyLogo {
-  max-width: 50px;
+  max-width: 32px;
   height: auto;
-  margin-left: 15px;
+  margin-right: 10px;
 }
 .Avatar {
   float: left;
